# ua-fiso

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  nohup.out  openapi.yaml  startDB.sh  startServer.sh
.github/workflows/: rust.yml
src/: debug.rs  main.rs
src/api/: admin_page.rs  img.rs  mod.rs
src/db/: fetch.rs  mod.rs  mutate.rs
src/tests/: mod.rs
src/utils/: consts.rs
