[package]
name = "ua-fiso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bson = { version = "2.9.0", features = ["chrono-0_4"] } 
chrono = "0.4.35"
eyre = "0.6.12"
mongodb = "2.8.2"
rocket = "0.5.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = "1.36.0"
ua-rlib = { git = "https://github.com/Unrated-Limited-Unlimited/ua-rlib", branch = "main" }