[package]
name = "ua-fiso"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
bson = { version = "2.9.0", features = ["chrono-0_4"] } 
chrono = "0.4.35"
colored = "2.1.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.21"
mongodb = "2.8.2"
rocket = { version = "0.5.0", features = ["json"] } 
rocket-errors = "0.1.0"
serde = { version = "1.0.197", features = ["derive"] } 
serde_json = "1.0.114"
tokio = "1.36.0"
toml = "0.8.11"
ua-rlib = { git = "https://github.com/Unrated-Limited-Unlimited/ua-rlib", branch = "main" }
